gpt-voice commit

--- a/html/hello-world.html
+++ b/html/hello-world.html
@@ -1,16 +1,7 @@
 <!-- https://jay23606.github.io/chat-gpt-voice/html/hello-world.html -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My First Webpage</title>
-  </head>
   <body>
-    <h1 id="greeting"></h1>
-    <script>
-      (() => {
-        const greeting = "Hello World2";
-        document.getElementById("greeting").textContent = greeting;
-      })();
-    </script>
+    <script> () => { document.write("Hello World!"); } </script>
   </body>
 </html>
