gpt-voice commit

--- a/html/openaijs-test.html
+++ b/html/openaijs-test.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <h1>OpenAI Stream Test</h1>
-  <textarea id="input1" rows="4" cols="50" placeholder="Tell me a joke about peanuts"></textarea>
+  <textarea id="input1" rows="4" cols="50">Tell me a joke about peanuts</textarea>
   <div id="output1"></div>
   <br>
-  <textarea id="input2" rows="4" cols="50" placeholder="Tell me a joke about hotdogs"></textarea>
+  <textarea id="input2" rows="4" cols="50">Tell me a joke about hotdogs</textarea>
   <div id="output2"></div>
 
   <script src="openai.js"></script>
