--- a/html/openaijs-test.html
+++ b/html/openaijs-test.html
@@ -17,7 +17,8 @@
   <!--<script src="openai.js"></script>-->
   <script>
     class AI {
-    constructor(options) {
+    constructor(options) 
+      	this.options = options;
         this.model = options?.model ?? "gpt-3.5-turbo";
         this.temperature = options?.temperature ?? 0.8;
         this.system = options?.system ?? null;
