--- a/html/test.html
+++ b/html/test.html
@@ -1,14 +1,1 @@
-<!-- https://jay23606.github.io/chat-gpt-voice/html/test.html -->
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Hello World</title>
-  </head>
-  <body>
-    <h1 id="hello"></h1>
-
-    <script>
-      document.getElementById("hello").innerHTML = "Hello World";
-    </script>
-  </body>
-</html>
+is this working?
