--- a/html/test.htm
+++ b/html/test.htm
@@ -1,9 +1,1 @@
-<!-- https://jay23606.github.io/chat-gpt-voice/html/test.htm -->
-<!DOCTYPE html>
-<html>
-  <body>
-    <script>
-      document.write("Hello World!");
-    </script>
-  </body>
-</html>
+...is this working?
