--- a/chat.html
+++ b/chat.html
@@ -19,15 +19,14 @@
         .btn{width:50vw;text-align:center;height:2.5em}
         legend{text-align:left;cursor:pointer;user-select:none;color:aqua}
         legend:hover,.btn:hover,#resizer:hover{color: aqua}
-        #editor-wrapper{position:relative;height:100%;width:100%}
-        #editor{height:100%;width:100%}
-        #resizer{position:absolute;bottom:0;left:0;height:5px;width:100%;background:gray;cursor:row-resize}
-        #resizer:hover {background: aqua}
+        #editor-wrapper{position:relative;max-height:90vh;overflow:auto;width:100%;max-width:calc(100vw - 50px)}
+        #editor,.CodeMirror{height:100%;width:100%}
         fieldset,input[type="checkbox"],button,textarea {border-radius: 10px}
     </style>
 </head>
 <body>
-    <textarea id="prompt-input" style="width:99vw;height:4em;font-size:large" placeholder="Enter prompt or touch screen for voice prompt"></textarea>
+    <textarea id="prompt-input" style="width:100%;box-sizing: border-box;height:4em;font-size:large;word-wrap:break-word" placeholder="Enter prompt or touch screen for voice prompt"></textarea>
+
     <div style="text-align:right">
         <input type="checkbox" id="code-cbx" style="width:2em;height:2em"><label for="code-cbx">Code</label>
         <input checked type="checkbox" id="enable-voice" style="width:2em;height:2em"><label for="enable-voice">Voice</label>
@@ -35,14 +34,13 @@
     </div>
     <fieldset>
         <legend>ChatGPT Response</legend>
-        <div id="openai-output" spellcheck="false" style="white-space:pre-wrap; color: white"></div>
+        <div id="openai-output" spellcheck="false" style="white-space:pre-wrap;color:white"></div>
     </fieldset>
     <div id="save-div" style="display: none; text-align: right">
         <fieldset>
             <legend>Code Editor</legend>
             <div id="editor-wrapper">
                 <div style="text-align: left; width: 100%; height:100%" id="editor"></div>
-                <div id="resizer"></div>
             </div>
             <div style="text-align:right">
                 <a id="gp-link" target="_blank" title="There is some delay before it is available" href="#"></a>
@@ -86,8 +84,8 @@
             const r = codeMirror && fromSave ? codeMirror.getValue() : openaiOutput.textContent.match(/```(?:html)?([\s\S]*?)```/i)?.[1] || openaiOutput.textContent;
             if (!codeMirror) codeMirror = CodeMirror(editor, { lineNumbers: true, mode: "htmlmixed", theme: "dracula", htmlMode: true, matchTags: { bothTags: true }, autoCloseTags: true, autoCloseBrackets: true });
             codeMirror.setValue(r);
-            let iframe = $el('iframe');
-            iframe.width = '99%', iframe.height = `${innerHeight >> 1}`, iframe.srcdoc = r, errors = [], $('errors').innerHTML = '';
+            let iframe = $el('iframe'), ifs = iframe.style;
+            ifs.border = 0, ifs.width = '100%', iframe.height = `${innerHeight*.9}`, iframe.srcdoc = r, errors = [], $('errors').innerHTML = '';
             div.appendChild(iframe);
             iframe.contentWindow.onerror = showErrors;
             if (!fromSave || !confirm("Press OK to also push to GitHub")) return;
@@ -124,7 +122,7 @@
             var SpeechRecognition = SpeechRecognition || webkitSpeechRecognition;
             let recognition = new SpeechRecognition();
             recognition.lang = lang;
-            body.onclick = e => ((e.target === body || e.target.id === 'openai-output') && enableVoice.checked && !cancelSpeaking()) ? recognition.start(): '';
+            body.onclick = e => ((e.target === body || e.target.id === 'openai-output') && enableVoice.checked && !cancelSpeaking()) ? recognition.start() : '';
             recognition.onresult = e => { input.value = e.results[0][0].transcript; if (btn) btn.click() }
             recognition.onspeechend = () => recognition.stop();
         }
@@ -162,7 +160,7 @@
                 if (done) return;
                 const decoder = new TextDecoder(), chunk = decoder.decode(value, { stream: true }), lines = chunk.split('\n');
                 for (const line of lines) {
-                if (stopStreaming) return;
+                    if (stopStreaming) return;
                     if (line.length === 0 || line.startsWith(':')) continue;
                     if (line === 'data: [DONE]') {
                         if (!enableVoice.checked) return;
@@ -175,6 +173,7 @@
                     arr.push(word); arr2.push(word);
                     if (/[.;!?]$/.test(word.trimEnd())) { sentences.push(arr); arr = []; }
                     output.textContent = arr2.join('');
+                    window.scrollTo(0, document.body.scrollHeight); //auto scroll while loading
                 }
             }
         } //add accordian-like thingy with using fieldsets/legends
@@ -189,16 +188,6 @@
             $('errors').innerHTML = `<div style="color:red;font-size:medium">${errors.join('<br>')}</div><button onclick="fixIt()">Fix it for me!</button>`;
         } //add button to quickly ask AI to fix the errors
         let fixIt = () => (promptInput.value = `Help! I am getting error(s):\n${errors.join('\n')}`, submitBtn.click());
-        //make code editor vertically resizable
-        let mouseDown = false, startY, startHeight, resizer = $("resizer");
-        resizer.addEventListener("mousedown", e => (mouseDown = true, startY = e.clientY, startHeight = codeMirror.getWrapperElement().clientHeight));
-        window.addEventListener("mousemove", e => {
-            if (!mouseDown) return;
-            const newHeight = startHeight + (e.clientY - startY);
-            codeMirror.setSize(null, newHeight);
-        });
-        window.addEventListener("mouseup", e => mouseDown = false);
-
     </script>
 </body>
 </html>
