--- a/html/embed-youtube2.html
+++ b/html/embed-youtube2.html
@@ -1,9 +1,5 @@
 <!-- https://jay23606.github.io/chat-gpt-voice/html/embed-youtube2.html -->
-<textarea id="searchQuery"></textarea>
-<button id="searchButton">Search</button>
-<div id="videoIds"></div>
-<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-<script>
+javascript
 $(document).ready(function() {
   // Set up the click event handler for the search button
   $('#searchButton').click(function() {
@@ -11,17 +7,28 @@ $(document).ready(function() {
     var searchQuery = $('#searchQuery').val();
 
     // Call the search API using JSONP
-    $.getJSON('https://www.youtube.com/results?search_query=' + encodeURIComponent(searchQuery) + '&callback=?', function(data) {
-      // Parse the JSON response and extract the video IDs
-      var videoIds = [];
-      $(data).find('.yt-lockup-video').each(function() {
-        var videoId = $(this).find('.yt-lockup-title > a').attr('href').match(/\/watch\?v=(.*)/)[1];
-        videoIds.push(videoId);
-      });
+    $.ajax({
+      url: 'https://www.youtube.com/results',
+      data: {
+        search_query: searchQuery
+      },
+      dataType: 'html',
+      method: 'GET',
+      success: function(data) {
+        // Extract the video IDs from the search results using regex
+        var videoIds = [];
+        var regex = /"videoId":"([^"]+)"/g;
+        var match;
+        while (match = regex.exec(data)) {
+          videoIds.push(match[1]);
+        }
 
-      // Display the video IDs in the div
-      $('#videoIds').html(videoIds.join('<br>'));
+        // Display the video IDs in the div
+        $('#videoIds').html(videoIds.join('<br>'));
+      },
+      error: function(xhr, status, error) {
+        console.log('Error:', error);
+      }
     });
   });
 });
-</script>
