--- a/html/embed-youtube3.html
+++ b/html/embed-youtube3.html
@@ -11,6 +11,7 @@
       display: flex;
       flex-wrap: nowrap;
       width: 100vw;
+      height: 185px;
       overflow-x: auto;
       margin-right: -10px;
       margin-left: -10px;
